# VLA-humanoid

./: CLAUDE.md  CMakeLists.txt  LICENSE  PLAYBACK_README.md  README.md  README_EN.md  __init__.py  action_quality_validator.py  config.json  config.py  fixed_act_inference_node.py  fixed_dataset.py  package.xml  requirements.txt  setup.py  simple_act_train.py  simple_act_train.py.backup  simple_act_trainback.py  smooth_act_inference_node.py  smooth_act_inference_node.py.backup  true_trajectory_generator.py  true_trajectory_inference_node.py
config/: mujoco_config.py
docs/: ROS_DATA_COLLECTION.md  TRAJECTORY_REPLAY.md
launch/: collector.launch
models/: config.json
modules/: __init__.py  data_preprocessing.py  dataset.py  diffusion_policy.py  direct_action_predictor.py  inference_engine.py  instruction.py  perception.py  replayer.py  ros_collector.py  simple_direction_predictor.py  skill.py  training_logic.py
scripts/: data_loader.py
