<?xml version="1.0"?>
<package format="2">
  <name>vla</name>
  <version>1.0.0</version>
  <description>VLA (Vision-Language-Action) Robot Learning Framework</description>
  
  <!-- Maintainer information -->
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <!-- Build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>std_srvs</build_depend>
  
  <!-- Run dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  
  <!-- Python dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>
  <exec_depend>python3-pillow</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>